<resources>
    <string name="app_name">MaterialHW</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="dummy">Dummy</string>
    <string name="pointsViewRating">Рейтинг:</string>
    <string name="refresh">Refresh</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="icon">icon</string>
    <string name="journal">Журнал</string>
    <string name="developers">Разработчики</string>
    <string name="_101">Запись в 101</string>
    <string name="rating">Рейтинг</string>
    <string name="protocol">Протокол изменений</string>
    <string name="logout">Выйти</string>
</resources>
